# ChaosEngine-GameDemo

Direct2D-Demo/: CMakeLists.txt  CMakeSettings.json
Direct2D-Demo/Game/: Game.cpp  Game.h
Direct2D-Demo/Game/Class/: Class.h
GameExample1/: CMakeLists.txt  game.cpp  game.h  main.cpp  sources.cpp
GameExample1/Game/: Game.cpp  Game.h
GameExample1/Game/Class/: Class.h
GameExample1/Game/Class/Scene/: MainScene.h  Scene.h
GameExample1/Game/Source/: Source.cpp
GameExample1/Game/Source/Scene/: MainScene.cpp
GameExample1/resources/audio/: notes.txt
GameExample1/resources/images/: player_1.aseprite
GameExample1/scenes/: MainScene.cpp  Scene_Main.cpp  scenes.h
